# xvdr-addon-android

./: .gitignore  .gitmodules  AndroidManifest.xml  Makefile.in  README  addon.xml.in  build.xml  configure.in
assets/addons/: .gitignore
jni/: Android.mk  Application.mk
res/layout/: activity_main.xml
res/values/: strings.xml
src/org/xvdr/addon/: MainActivity.java
